Fix Project Business Logic and Code Refactor